LifeForce/Manifest/unpackaged/objects/Clone_Case_Setting__mdt.object
<CustomObject>
    <fields>
        <fullName>Cloneable__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Cloneable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Editable__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Editable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sortable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sortable</label>
        <type>Checkbox</type>
    </fields>
    <label>Clone Case Setting</label>
    <pluralLabel>Clone Case Settings</pluralLabel>
</CustomObject>